# quantlab-trading1.0

./: .gitignore  FINAL_SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART_GUIDE.md  README.md  SUCCESS_SUMMARY.md  config.yaml  install.py  pyproject.toml  quickstart.bat  quickstart.py  quickstart.sh  requirements.txt  test_project.py
notebooks/: demo.ipynb
quantlab/: __init__.py  config.py
quantlab/backtest/: engine.py  metrics.py  portfolio.py
quantlab/data/: binance_client.py  loader.py
quantlab/indicators/: cluster.py  ma_ema.py  macd.py
quantlab/plotting/: __init__.py  kline.py
quantlab/strategy/: cluster_macd_4h.py
quantlab/utils/: io.py  timeframes.py
scripts/: fetch_to_csv.py  generate_mock_data.py  plot_kline.py  run_backtest.py
